err/plinth.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyTomCrypt-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plinth'...
Compiling './lib/python3.5/site-packages/plinth/core.py'...
***   File "./lib/python3.5/site-packages/plinth/core.py", line 74
    except PacketException, err:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plinth/identity.py'...
***   File "./lib/python3.5/site-packages/plinth/identity.py", line 142
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plinth-0.0.14.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tomcrypt'...
Listing './share'...
Listing './share/python-wheels'...
